Fix checkbox styling (alignment)

--- a/app/styles/au-kaleidos-css/_auk-checkbox.scss
+++ b/app/styles/au-kaleidos-css/_auk-checkbox.scss
@@ -6,7 +6,8 @@
   display: block;
   position: relative;
   padding: .5rem 0 .5rem 2.8rem;
-  height: 3rem;
+  min-height: 3rem;
+  line-height: 1.3;
 }
 
 .auk-checkbox__table{
